--- a/pinecone-qa/requirements.txt
+++ b/pinecone-qa/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.25.0
-langchain==0.0.268
+langchain==0.1.3
 openai==0.27.8
 tiktoken==0.4.0
 pypdf==3.15.1
 pinecone-client==2.2.2
-google-generativeai==0.3.2
+langchain-google-genai==0.0.6
+sentence-transformers==2.2.2
